test_regress/t/t_class_new_bad.out
%Error: t/t_class_new_bad.v:28:12: class 'new()' cannot be static (IEEE 1800-2023 18.3)
                                 : ... note: In instance 't'
   28 |   function new();   
      |            ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_new_bad.v:34:12: class 'new()' cannot be virual (IEEE 1800-2023 18.3)
                                 : ... note: In instance 't'
   34 |   function new();   
      |            ^~~
%Error: t/t_class_new_bad.v:41:19: class 'new()' cannot be virual (IEEE 1800-2023 18.3)
                                 : ... note: In instance 't'
   41 | function ClsNew3::new();
      |                   ^~~
%Error: t/t_class_new_bad.v:49:14: Too many arguments in call to function 'new'
                                 : ... note: In instance 't'
   49 |     c1 = new(3);   
      |          ^~~
                                 : ... Location of function 'new' declaration:
   10 |   function new();
      |            ^~~
%Error: t/t_class_new_bad.v:50:14: Too many arguments in call to function 'new'
                                 : ... note: In instance 't'
   50 |     c2 = new(3);   
      |          ^~~
                                 : ... Location of function 'new' declaration:
   15 | class ClsNoNew;
      | ^~~~~
%Error: t/t_class_new_bad.v:51:10: Missing argument on non-defaulted argument 'i' in function call to FUNC 'new'
                                 : ... note: In instance 't'
   51 |     c3 = new();   
      |          ^~~
%Error: t/t_class_new_bad.v:52:10: dynamic new() not expected in this context (data type must be dynamic array)
                                 : ... note: In instance 't'
   52 |     c1 = new[2];
      |          ^~~
%Error: Internal Error: t/t_class_new_bad.v:52:10: ../V3Width.cpp:#: Node has no type
                                                 : ... note: In instance 't'
   52 |     c1 = new[2];
      |          ^~~
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
